--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>PriceOp</title>
   <style type="text/css">
-    body {
+    body, text {
       font-family: sans-serif;
     }
     svg {
-      border: 1px solid #08f;
+      /*border: 1px solid #08f;*/
     }
     .line, .line2{
       fill: transparent;
@@ -18,6 +18,12 @@
     .line2{
       stroke: #f08;
     }
+
+    .axis path,.axis line{
+      fill:none;
+      stroke:#000;
+      stroke-width:1;
+    }
   </style>
 </head>
 <body>
@@ -25,12 +31,15 @@
 
   <script type="text/javascript" src="bower_components/d3/d3.js"></script>
   <script type="text/javascript">
-    var width = 500,
-        height = 500;
+    var margin = {top: 20, right: 20, bottom: 30, left: 50},
+        width = 500 - margin.left - margin.right,
+        height = 500 - margin.top - margin.bottom;
 
     var svg = d3.select('body').append('svg')
-      .attr('width', width)
-      .attr('height', height);
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+      .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 
     function demand1(x) {
@@ -57,12 +66,14 @@
       }
     });
 
-
     var x = d3.scale.linear()
       .range([0, width]);
 
     var y = d3.scale.linear()
-      .range([height, 0]);
+      .range([height/2 - 20, 0]);
+
+    var y2 = d3.scale.linear()
+      .range([height, height/2 + 20]);
 
 
     var line = d3.svg.line()
@@ -70,17 +81,149 @@
       .y(function(d) { return y(d.y); });
 
     x.domain(d3.extent(series1.concat(series2), function(d) { return d.x; }));
-    y.domain(d3.extent(series1.concat(series2), function(d) { return d.y; }));
+    // y.domain(d3.extent(series1.concat(series2), function(d) { return d.y; }));
+    y.domain([0,1]);
 
-    svg.append("path")
+    var path1 = svg.append("path")
       .datum(series1)
       .attr("class", "line")
       .attr("d", line);
 
-    svg.append("path")
+    var path2 = svg.append("path")
       .datum(series2)
       .attr("class", "line2")
       .attr("d", line);
+
+    var xAxis = d3.svg.axis()
+      .scale(x)
+      .tickFormat(function(d){return '£' + d})
+      .orient("bottom");
+
+    var yAxis = d3.svg.axis()
+      .scale(y)
+      .tickFormat(function(d){return d*100 + '%'})
+      .orient("left");
+
+
+    var x_axis = svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0.5," + (height/2 + 0.5 - 20) + ")")
+      .call(xAxis);
+
+    var y_axis = svg.append("g")
+      .attr("class", "y axis")
+      .attr("transform", "translate(.5,.5)")
+      .call(yAxis);
+
+
+
+
+    function Pi1(x) {
+      return demand1(x) * x;
+    }
+
+
+    function Pi2(x) {
+      return demand2(x) * x;
+    }
+
+
+    var series12 = d3.range(100,240).map(function(x){
+      return {
+        x:x,
+        y:Pi1(x)
+      }
+    });
+
+    var series22 = d3.range(100,240).map(function(x){
+      return {
+        x:x,
+        y:Pi2(x)
+      }
+    });
+
+
+    var x2 = d3.scale.linear()
+      .range([0, width]);
+
+    var y2 = d3.scale.linear()
+      .range([height, height/2 + 20]);
+
+    x2.domain(d3.extent(series12.concat(series22), function(d) { return d.x; }));
+    y2.domain(d3.extent(series12.concat(series22), function(d) { return d.y; }));
+    // y2.domain([0,1]);
+
+
+    var line2 = d3.svg.line()
+      .x(function(d) { return x2(d.x); })
+      .y(function(d) { return y2(d.y); });
+
+
+    var path12 = svg.append("path")
+      .datum(series12)
+      .attr("class", "line")
+      .attr("d", line2);
+
+    var path22 = svg.append("path")
+      .datum(series22)
+      .attr("class", "line2")
+      .attr("d", line2);
+
+    var xAxis2 = d3.svg.axis()
+      .scale(x)
+      .tickFormat(function(d){return '£' + d})
+      .orient("bottom");
+
+    var yAxis2 = d3.svg.axis()
+      .scale(y2)
+      .tickFormat(function(d){return '£' + d})
+      .orient("left");
+
+
+    var x_axis2 = svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0.5," + (height + 0.5) + ")")
+      .call(xAxis2);
+
+    var y_axis2 = svg.append("g")
+      .attr("class", "y axis")
+      .attr("transform", "translate(.5,.5)")
+      .call(yAxis2);
+
+
+
+
+
+
+
+    // // part 2
+    // var line2 = d3.svg.line()
+    //   .x(function(d) { return x(d.x); })
+    //   .y(function(d) { return y(d.y)/2; });
+
+
+    // function next(){
+
+    //   y_axis.selectAll('.tick')
+    //     .transition()
+    //     .attr('transform',function(d){return 'translate(0,'+y(d)/2+')'})
+    //     .duration(1000)
+
+    //   x_axis
+    //     .transition()
+    //     .attr("transform", "translate(0.5," + ((height/2) + 0.5) + ")")
+    //     .duration(1000)
+
+    //   path1.transition().attr('d', line2).duration(1000)
+    //   path2.transition().attr('d', line2).duration(1000)
+
+    // }
+
+
+    // path1.transition().attr('d', line2).duration(3000)
+    // path2.transition().attr('d', line2).duration(3000)
+
+
 
   </script>
 </body>
