--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
       stroke:#000;
       stroke-width:1;
     }
+
+    .guide1{
+      fill:none;
+      stroke: #08f;
+      stroke-width:2;
+    }
+
+    .guide2{
+      fill:none;
+      stroke: #f08;
+      stroke-width:2;
+    }
   </style>
 </head>
 <body>
@@ -43,6 +55,21 @@
       .append("g")
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
+
+    var guide1 = svg.append('line')
+      .attr('class', 'guide1')
+      .attr('x1', 50)
+      .attr('x2', 50)
+      .attr('y1', 0)
+      .attr('y2', height)
+
+
+    var guide2 = svg.append('line')
+      .attr('class', 'guide2')
+      .attr('x1', 50)
+      .attr('x2', 50)
+      .attr('y1', 0)
+      .attr('y2', height)
 
     function demand1(x) {
       return Math.exp(10-0.05*x)/(1+Math.exp(10-0.05*x))
@@ -248,9 +275,13 @@
         ] );
 
         var colors = new Float32Array( [
-          1, 0, 0,  1, 0.6, 0,
-          0, 1, 0,  0.6, 1, 0,
-          0, 0, 1,  0, 0.6, 1
+          0, .53, 1,   0, .53, 1,  // g
+          1,  0,  .53, 1,  0,  .53, // r
+          0, 0,   0,   0, 0, 0    // b
+
+          // 1, 0, 0,  1, 0, 0, // r
+          // 0, 1, 0,  0.6, 1, 0, // g
+          // 0, 0, 1,  0, 0.6, 1  // b
         ] );
 
         var geometry = new THREE.BufferGeometry();
@@ -353,6 +384,8 @@
 
       var line_geometry = new THREE.Geometry();
 
+      line_geometry.datum = [];
+
       d3.range(-.1,.9,.005).forEach(function(x){
 
         // (x*140)+100
@@ -385,6 +418,11 @@
         line_geometry.vertices.push(
           p  
         );
+
+        line_geometry.datum.push({
+          x:x,
+          y:y
+        })
 
         // line_geometry.vertices.push(new THREE.Vector3(-1, 0, 0));
 
@@ -430,6 +468,14 @@
         sphere.position.x = line_geometry.vertices[j].x
         sphere.position.y = line_geometry.vertices[j].y
         sphere.position.z = line_geometry.vertices[j].z
+
+        guide1.attr('x1', x(line_geometry.datum[j].x))
+        guide1.attr('x2', x(line_geometry.datum[j].x))
+
+        guide2.attr('x1', x(line_geometry.datum[j].y))
+        guide2.attr('x2', x(line_geometry.datum[j].y))
+
+        // guide1.attr({x1: x((x-100)/140),x2: x((x-100)/140)})
 
         group.rotation.z += 0.01;
 
