hook up guides again

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <script type="text/javascript">
     var chart   = new Chart(document.getElementById('target'));
 
-    var chart3d = new Chart3d(document.getElementById('target'));
+    var chart3d = new Chart3d(document.getElementById('target'), chart);
 
   </script>
 
